tracking the trackers added

--- a/_includes/_mypubs.html
+++ b/_includes/_mypubs.html
@@ -1,3 +1,40 @@
+<!-- Item: lealtaixearxiv2017 -->
+<!-- <li >-->
+<table style="width:100%">
+<tr>
+<td style="width:110px;vertical-align: top;">
+<img style="float: left;margin-right: 10px" border="1px solid #bbb" src="{{ site.url }}/images/papers/LeaMilSchCreReiRotArxiv2017.png" width="100px" height="100px">
+</td>
+<td>
+<p>
+L. Leal-Taix&eacute;, A. Milan, K. Schindler, D. Cremers, I. Reid and S. Roth<br />
+<strong>Tracking the Trackers: An Analysis of the State of the Art in Multiple Object Tracking</strong><br />
+<i>arXiv:1704.02781</i>, 
+
+
+2017.
+<br />
+
+<a href="javascript:toggleBibtex('lealtaixearxiv2017')">[BibTeX]</a>
+
+<a href="https://arxiv.org/abs/1704.02781">[PDF]</a> 
+</p>
+
+<div id="bib_lealtaixearxiv2017" class="bibtex noshow">
+<pre>
+@article{lealtaixearxiv2017,
+  author = {L. Leal-Taix&eacute; and A. Milan and K. Schindler and D. Cremers and I. Reid and S. Roth},
+  title = {Tracking the Trackers: An Analysis of the State of the Art in Multiple Object Tracking},
+  journal = {arXiv:1704.02781},
+  year = {2017}
+}
+</pre>
+</div>
+</td>
+</tr>
+
+</table>
+
 <!-- Item: hazirbas:arxiv:2017 -->
 <!-- <li >-->
 <table style="width:100%">
@@ -212,44 +249,6 @@ A. Milan, L. Leal-Taix&eacute;, I. Reid, S. Roth and K. Schindler<br />
   title = {MOT16: A benchmark for multi-object tracking},
   journal = {arXiv:1603.00831},
   year = {2016}
-}
-</pre>
-</div>
-</td>
-</tr>
-
-</table>
-
-<!-- Item: lealbookchapter2012 -->
-<!-- <li >-->
-<table style="width:100%">
-<tr>
-<td style="width:110px;vertical-align: top;">
-<img style="float: left;margin-right: 10px" border="1px solid #bbb" src="{{ site.url }}/images/papers/LeaRosBookChapter2012.png" width="100px" height="100px">
-</td>
-<td>
-<p>
-L. Leal-Taix&eacute; and B. Rosenhahn<br />
-<strong>Pedestrian interaction in tracking: the social force model and global optimization methods</strong><br />
-<i>Modeling, Simulation and Visual Analysis of Crowds: A multidisciplinary perspective</i>, 
-Springer Berlin Heidelberg, 
-
-2013.
-<br />
-
-<a href="javascript:toggleBibtex('lealbookchapter2012')">[BibTeX]</a>
-
-<a href="https://drive.google.com/open?id=0B1e2GU8Qot86aWtaeTNoNjJiQ0U">[PDF]</a><a href="{{ site.url }}/code"> [Code]</a> 
-</p>
-
-<div id="bib_lealbookchapter2012" class="bibtex noshow">
-<pre>
-@article{lealbookchapter2012,
-  author = {L. Leal-Taix&eacute; and B. Rosenhahn},
-  title = {Pedestrian interaction in tracking: the social force model and global optimization methods},
-  journal = {Modeling, Simulation and Visual Analysis of Crowds: A multidisciplinary perspective},
-  publisher = {Springer Berlin Heidelberg},
-  year = {2013}
 }
 </pre>
 </div>
@@ -629,35 +628,36 @@ A. Kuznetsova, L. Leal-Taix&eacute; and B. Rosenhahn<br />
 
 </table>
 
-<!-- Item: maleschlijskibio2011 -->
+<!-- Item: lealbookchapter2012 -->
 <!-- <li >-->
 <table style="width:100%">
 <tr>
 <td style="width:110px;vertical-align: top;">
-<img style="float: left;margin-right: 10px" border="1px solid #bbb" src="{{ site.url }}/images/papers/MalLeaWeiFinAldClaSenRosRos2011.png" width="100px" height="100px">
+<img style="float: left;margin-right: 10px" border="1px solid #bbb" src="{{ site.url }}/images/papers/LeaRosBookChapter2012.png" width="100px" height="100px">
 </td>
 <td>
 <p>
-S. Maleschlijski, L. Leal-Taix&eacute;, S. Weisse, A. Di Fino, N. Aldred, A. S. Clare, G. H. Sendra, B. Rosenhahn and A. Rosenhahn<br />
-<strong>A stereoscopic approach for three dimensional tracking of marine biofouling microorganisms</strong><br />
-<i>Microscopic Image Analysis with Applications in Biology (MIAAB)</i>, 
+L. Leal-Taix&eacute; and B. Rosenhahn<br />
+<strong>Pedestrian interaction in tracking: the social force model and global optimization methods</strong><br />
+<i>Modeling, Simulation and Visual Analysis of Crowds: A multidisciplinary perspective</i>, 
+Springer Berlin Heidelberg, 
 
-
-2011.
+2013.
 <br />
 
-<a href="javascript:toggleBibtex('maleschlijskibio2011')">[BibTeX]</a>
+<a href="javascript:toggleBibtex('lealbookchapter2012')">[BibTeX]</a>
 
-<a href="https://drive.google.com/open?id=0B1e2GU8Qot86OE8ySk13ZjRUdlk">[PDF]</a> 
+<a href="https://drive.google.com/open?id=0B1e2GU8Qot86aWtaeTNoNjJiQ0U">[PDF]</a><a href="{{ site.url }}/code"> [Code]</a> 
 </p>
 
-<div id="bib_maleschlijskibio2011" class="bibtex noshow">
+<div id="bib_lealbookchapter2012" class="bibtex noshow">
 <pre>
-@article{maleschlijskibio2011,
-  author = {S. Maleschlijski and L. Leal-Taix&eacute; and S. Weisse and A. Di Fino and N. Aldred and A. S. Clare and G. H. Sendra and B. Rosenhahn and A. Rosenhahn},
-  title = {A stereoscopic approach for three dimensional tracking of marine biofouling microorganisms},
-  journal = {Microscopic Image Analysis with Applications in Biology (MIAAB)},
-  year = {2011}
+@article{lealbookchapter2012,
+  author = {L. Leal-Taix&eacute; and B. Rosenhahn},
+  title = {Pedestrian interaction in tracking: the social force model and global optimization methods},
+  journal = {Modeling, Simulation and Visual Analysis of Crowds: A multidisciplinary perspective},
+  publisher = {Springer Berlin Heidelberg},
+  year = {2013}
 }
 </pre>
 </div>
@@ -695,43 +695,6 @@ M. Fenzi, R. Dragon, L. Leal-Taix&eacute;, B. Rosenhahn and J. Ostermann<br />
   title = {3D Object Recognition and Pose Estimation for Multiple Objects using Multi-Prioritized RANSAC and Model Updating},
   journal = {German Conference on Pattern Recognition (GCPR)},
   year = {2012}
-}
-</pre>
-</div>
-</td>
-</tr>
-
-</table>
-
-<!-- Item: ponsdagm2011 -->
-<!-- <li >-->
-<table style="width:100%">
-<tr>
-<td style="width:110px;vertical-align: top;">
-<img style="float: left;margin-right: 10px" border="1px solid #bbb" src="{{ site.url }}/images/papers/PonLeaTruRosDAGM2011.png" width="100px" height="100px">
-</td>
-<td>
-<p>
-G. Pons-Moll, L. Leal-Taix&eacute;, T. Truong and B. Rosenhahn<br />
-<strong>Efficient and robust shape matching for model based human motion capture</strong><br />
-<i>German Conference on Pattern Recognition (GCPR)</i>, 
-
-
-2011.
-<br />
-
-<a href="javascript:toggleBibtex('ponsdagm2011')">[BibTeX]</a>
-
-<a href="https://drive.google.com/open?id=0B1e2GU8Qot86M0s0LXY1NDNhVm8">[PDF]</a> 
-</p>
-
-<div id="bib_ponsdagm2011" class="bibtex noshow">
-<pre>
-@article{ponsdagm2011,
-  author = {G. Pons-Moll and L. Leal-Taix&eacute; and T. Truong and B. Rosenhahn},
-  title = {Efficient and robust shape matching for model based human motion capture},
-  journal = {German Conference on Pattern Recognition (GCPR)},
-  year = {2011}
 }
 </pre>
 </div>
@@ -956,6 +919,80 @@ L. Leal-Taix&eacute;, G. Pons-Moll and B. Rosenhahn<br />
   author = {L. Leal-Taix&eacute; and G. Pons-Moll and B. Rosenhahn},
   title = {Everybody needs somebody: Modeling social and grouping behavior on a linear programming multiple people tracker},
   journal = {IEEE International Conference on Computer Vision (ICCV) Workshops. 1st Workshop on Modeling, Simulation and Visual Analysis of Large Crowds},
+  year = {2011}
+}
+</pre>
+</div>
+</td>
+</tr>
+
+</table>
+
+<!-- Item: maleschlijskibio2011 -->
+<!-- <li >-->
+<table style="width:100%">
+<tr>
+<td style="width:110px;vertical-align: top;">
+<img style="float: left;margin-right: 10px" border="1px solid #bbb" src="{{ site.url }}/images/papers/MalLeaWeiFinAldClaSenRosRos2011.png" width="100px" height="100px">
+</td>
+<td>
+<p>
+S. Maleschlijski, L. Leal-Taix&eacute;, S. Weisse, A. Di Fino, N. Aldred, A. S. Clare, G. H. Sendra, B. Rosenhahn and A. Rosenhahn<br />
+<strong>A stereoscopic approach for three dimensional tracking of marine biofouling microorganisms</strong><br />
+<i>Microscopic Image Analysis with Applications in Biology (MIAAB)</i>, 
+
+
+2011.
+<br />
+
+<a href="javascript:toggleBibtex('maleschlijskibio2011')">[BibTeX]</a>
+
+<a href="https://drive.google.com/open?id=0B1e2GU8Qot86OE8ySk13ZjRUdlk">[PDF]</a> 
+</p>
+
+<div id="bib_maleschlijskibio2011" class="bibtex noshow">
+<pre>
+@article{maleschlijskibio2011,
+  author = {S. Maleschlijski and L. Leal-Taix&eacute; and S. Weisse and A. Di Fino and N. Aldred and A. S. Clare and G. H. Sendra and B. Rosenhahn and A. Rosenhahn},
+  title = {A stereoscopic approach for three dimensional tracking of marine biofouling microorganisms},
+  journal = {Microscopic Image Analysis with Applications in Biology (MIAAB)},
+  year = {2011}
+}
+</pre>
+</div>
+</td>
+</tr>
+
+</table>
+
+<!-- Item: ponsdagm2011 -->
+<!-- <li >-->
+<table style="width:100%">
+<tr>
+<td style="width:110px;vertical-align: top;">
+<img style="float: left;margin-right: 10px" border="1px solid #bbb" src="{{ site.url }}/images/papers/PonLeaTruRosDAGM2011.png" width="100px" height="100px">
+</td>
+<td>
+<p>
+G. Pons-Moll, L. Leal-Taix&eacute;, T. Truong and B. Rosenhahn<br />
+<strong>Efficient and robust shape matching for model based human motion capture</strong><br />
+<i>German Conference on Pattern Recognition (GCPR)</i>, 
+
+
+2011.
+<br />
+
+<a href="javascript:toggleBibtex('ponsdagm2011')">[BibTeX]</a>
+
+<a href="https://drive.google.com/open?id=0B1e2GU8Qot86M0s0LXY1NDNhVm8">[PDF]</a> 
+</p>
+
+<div id="bib_ponsdagm2011" class="bibtex noshow">
+<pre>
+@article{ponsdagm2011,
+  author = {G. Pons-Moll and L. Leal-Taix&eacute; and T. Truong and B. Rosenhahn},
+  title = {Efficient and robust shape matching for model based human motion capture},
+  journal = {German Conference on Pattern Recognition (GCPR)},
   year = {2011}
 }
 </pre>
