bmvc arxiv paper added

--- a/_includes/_mypubs.html
+++ b/_includes/_mypubs.html
@@ -1,3 +1,39 @@
+<!-- Item: henschel:arxiv:2017 -->
+<!-- <li >-->
+<table style="width:100%">
+<tr>
+<td style="width:110px;vertical-align: top;">
+<img style="float: left;margin-right: 10px" border="1px solid #bbb" src="{{ site.url }}/images/papers/HenLeaCreRosArxiv2017.png" width="100px" height="100px">
+</td>
+<td>
+<p>
+R. Henschel, L. Leal-Taix&eacute;, D. Cremers and B. Rosenhahn<br />
+<strong>Improvements to Frank-Wolfe optimization for multi-detector multi-object tracking</strong><br />
+<i>arXiv:1705.08314</i>, 
+
+
+2017.
+<br />
+
+<a href="javascript:toggleBibtex('henschel:arxiv:2017')">[BibTeX]</a>
+
+<a href="https://arxiv.org/abs/1705.08314">[PDF]</a> 
+</p>
+
+<div id="bib_henschel:arxiv:2017" class="bibtex noshow">
+<pre>
+@article{henschel:arxiv:2017,
+  author = {R. Henschel and L. Leal-Taix&eacute; and D. Cremers and B. Rosenhahn},
+  title = {Improvements to Frank-Wolfe optimization for multi-detector multi-object tracking},
+  journal = {arXiv:1705.08314},
+  year = {2017}
+}
+</pre>
+</div>
+</td>
+</tr>
+
+</table>
 <!-- Item: lealtaixearxiv2017 -->
 <!-- <li >-->
 <table style="width:100%">
@@ -34,7 +70,6 @@ L. Leal-Taix&eacute;, A. Milan, K. Schindler, D. Cremers, I. Reid and S. Roth<br
 </tr>
 
 </table>
-
 <!-- Item: hazirbas:arxiv:2017 -->
 <!-- <li >-->
 <table style="width:100%">
@@ -71,7 +106,6 @@ C. Hazirbas, L. Leal-Taix&eacute; and D. Cremers<br />
 </tr>
 
 </table>
-
 <!-- Item: caellescvpr2017 -->
 <!-- <li >-->
 <table style="width:100%">
@@ -108,7 +142,6 @@ S. Caelles, K.-K. Maninis, J. Pont-Tuset, L. Leal-Taix&eacute;, D. Cremers and L
 </tr>
 
 </table>
-
 <!-- Item: walcharxiv2016 -->
 <!-- <li >-->
 <table style="width:100%">
@@ -145,7 +178,6 @@ F. Walch, C. Hazirbas, L. Leal-Taix&eacute;, T. Sattler, S. Hilsenbeck and D. Cr
 </tr>
 
 </table>
-
 <!-- Item: henschelarxiv2016 -->
 <!-- <li >-->
 <table style="width:100%">
@@ -182,7 +214,6 @@ R. Henschel, L. Leal-Taix&eacute;, B. Rosenhahn and K. Schindler<br />
 </tr>
 
 </table>
-
 <!-- Item: lealcvprw2016 -->
 <!-- <li >-->
 <table style="width:100%">
@@ -219,7 +250,6 @@ L. Leal-Taix&eacute;, C. Canton-Ferrer and K. Schindler<br />
 </tr>
 
 </table>
-
 <!-- Item: milanarxiv2016 -->
 <!-- <li >-->
 <table style="width:100%">
@@ -239,7 +269,7 @@ A. Milan, L. Leal-Taix&eacute;, I. Reid, S. Roth and K. Schindler<br />
 
 <a href="javascript:toggleBibtex('milanarxiv2016')">[BibTeX]</a>
 
-<a href="https://arxiv.org/abs/1603.00831">[PDF]</a><a href="http://www.motchallenge.net/"> [MOTChallenge]</a> 
+<a href="https://arxiv.org/abs/1603.00831">[PDF]</a> <a href="http://www.motchallenge.net/"> [MOTChallenge]</a> 
 </p>
 
 <div id="bib_milanarxiv2016" class="bibtex noshow">
@@ -256,7 +286,6 @@ A. Milan, L. Leal-Taix&eacute;, I. Reid, S. Roth and K. Schindler<br />
 </tr>
 
 </table>
-
 <!-- Item: fenziiccv2015 -->
 <!-- <li >-->
 <table style="width:100%">
@@ -293,7 +322,6 @@ M. Fenzi, L. Leal-Taix&eacute;, J. Ostermann and T. Tuytelaars<br />
 </tr>
 
 </table>
-
 <!-- Item: milancvpr2015 -->
 <!-- <li >-->
 <table style="width:100%">
@@ -331,7 +359,6 @@ A. Milan, L. Leal-Taix&eacute;, K. Schindler and I. Reid<br />
 </tr>
 
 </table>
-
 <!-- Item: lealarxiv2015 -->
 <!-- <li >-->
 <table style="width:100%">
@@ -351,7 +378,7 @@ L. Leal-Taix&eacute;, A. Milan, I. Reid, S. Roth and K. Schindler<br />
 
 <a href="javascript:toggleBibtex('lealarxiv2015')">[BibTeX]</a>
 
-<a href="https://arxiv.org/abs/1504.01942">[PDF]</a><a href="http://www.motchallenge.net/"> [MOTChallenge]</a> 
+<a href="https://arxiv.org/abs/1504.01942">[PDF]</a> <a href="http://www.motchallenge.net/"> [MOTChallenge]</a> 
 </p>
 
 <div id="bib_lealarxiv2015" class="bibtex noshow">
@@ -368,7 +395,6 @@ L. Leal-Taix&eacute;, A. Milan, I. Reid, S. Roth and K. Schindler<br />
 </tr>
 
 </table>
-
 <!-- Item: oliveiracmig2015 -->
 <!-- <li >-->
 <table style="width:100%">
@@ -378,7 +404,7 @@ L. Leal-Taix&eacute;, A. Milan, I. Reid, S. Roth and K. Schindler<br />
 </td>
 <td>
 <p>
-D. A. B. Oliveria, L. Leal-Taix&eacute;, R. Q. Feitosa and B. Rosenhahn<br />
+D.A.B. Oliveria, L. Leal-Taix&eacute;, R.Q. Feitosa and B. Rosenhahn<br />
 <strong>Automatic tracking of vessel-like structures from a single starting point</strong><br />
 <i>Computerized Medical Imaging and Graphics</i>, 
 
@@ -405,7 +431,6 @@ D. A. B. Oliveria, L. Leal-Taix&eacute;, R. Q. Feitosa and B. Rosenhahn<br />
 </tr>
 
 </table>
-
 <!-- Item: fenziwacv2015 -->
 <!-- <li >-->
 <table style="width:100%">
@@ -442,7 +467,6 @@ M. Fenzi, L. Leal-Taix&eacute;, K. Schindler and B. Rosenhahn<br />
 </tr>
 
 </table>
-
 <!-- Item: henschelgcpr2014 -->
 <!-- <li >-->
 <table style="width:100%">
@@ -479,7 +503,6 @@ R. Henschel, L. Leal-Taix&eacute; and B. Rosenhahn<br />
 </tr>
 
 </table>
-
 <!-- Item: lealcvpr2014 -->
 <!-- <li >-->
 <table style="width:100%">
@@ -499,7 +522,7 @@ L. Leal-Taix&eacute;, M. Fenzi, A. Kuznetsova, B. Rosenhahn and S. Savarese<br /
 
 <a href="javascript:toggleBibtex('lealcvpr2014')">[BibTeX]</a>
 
-<a href="https://drive.google.com/open?id=0B1e2GU8Qot86SGRtUy1iX2hmM1U">[PDF]</a><a href="https://drive.google.com/open?id=0B1e2GU8Qot86UjNoRWU2MXgwLWs"> [SUNw abstract]</a> 
+<a href="https://drive.google.com/open?id=0B1e2GU8Qot86SGRtUy1iX2hmM1U">[PDF]</a> <a href="https://drive.google.com/open?id=0B1e2GU8Qot86UjNoRWU2MXgwLWs"> [SUNw abstract]</a> 
 </p>
 
 <div id="bib_lealcvpr2014" class="bibtex noshow">
@@ -516,7 +539,6 @@ L. Leal-Taix&eacute;, M. Fenzi, A. Kuznetsova, B. Rosenhahn and S. Savarese<br /
 </tr>
 
 </table>
-
 <!-- Item: lealthesis2014 -->
 <!-- <li >-->
 <table style="width:100%">
@@ -536,7 +558,7 @@ L. Leal-Taix&eacute;<br />
 
 <a href="javascript:toggleBibtex('lealthesis2014')">[BibTeX]</a>
 
-<a href="https://drive.google.com/open?id=0B1e2GU8Qot86dVhlclpXcjVzYU0">[PDF]</a><a href="http://arxiv.org/abs/1411.7935"> [ArXiV]</a> 
+<a href="https://drive.google.com/open?id=0B1e2GU8Qot86dVhlclpXcjVzYU0">[PDF]</a> <a href="http://arxiv.org/abs/1411.7935"> [ArXiV]</a> 
 </p>
 
 <div id="bib_lealthesis2014" class="bibtex noshow">
@@ -553,7 +575,6 @@ L. Leal-Taix&eacute;<br />
 </tr>
 
 </table>
-
 <!-- Item: fenzicvpr2013 -->
 <!-- <li >-->
 <table style="width:100%">
@@ -590,7 +611,6 @@ M. Fenzi, L. Leal-Taix&eacute;, B. Rosenhahn and J. Ostermann<br />
 </tr>
 
 </table>
-
 <!-- Item: kuznetsovaiccvw2013 -->
 <!-- <li >-->
 <table style="width:100%">
@@ -627,7 +647,6 @@ A. Kuznetsova, L. Leal-Taix&eacute; and B. Rosenhahn<br />
 </tr>
 
 </table>
-
 <!-- Item: lealbookchapter2012 -->
 <!-- <li >-->
 <table style="width:100%">
@@ -647,7 +666,7 @@ Springer Berlin Heidelberg,
 
 <a href="javascript:toggleBibtex('lealbookchapter2012')">[BibTeX]</a>
 
-<a href="https://drive.google.com/open?id=0B1e2GU8Qot86aWtaeTNoNjJiQ0U">[PDF]</a><a href="{{ site.url }}/code"> [Code]</a> 
+<a href="https://drive.google.com/open?id=0B1e2GU8Qot86aWtaeTNoNjJiQ0U">[PDF]</a> <a href="{{ site.url }}/code"> [Code]</a> 
 </p>
 
 <div id="bib_lealbookchapter2012" class="bibtex noshow">
@@ -665,7 +684,6 @@ Springer Berlin Heidelberg,
 </tr>
 
 </table>
-
 <!-- Item: fenzidagm2012 -->
 <!-- <li >-->
 <table style="width:100%">
@@ -702,7 +720,6 @@ M. Fenzi, R. Dragon, L. Leal-Taix&eacute;, B. Rosenhahn and J. Ostermann<br />
 </tr>
 
 </table>
-
 <!-- Item: lealcvpr2012 -->
 <!-- <li >-->
 <table style="width:100%">
@@ -722,7 +739,7 @@ L. Leal-Taix&eacute;, G. Pons-Moll and B. Rosenhahn<br />
 
 <a href="javascript:toggleBibtex('lealcvpr2012')">[BibTeX]</a>
 
-<a href="https://drive.google.com/open?id=0B1e2GU8Qot86UDNfUGVoelNzM0k">[PDF]</a><a href="https://drive.google.com/open?id=0B1e2GU8Qot86T2psZVV3X2k4bFk"> [Poster]</a><a href="{{ site.url }}/code"> [Code]</a><a href="http://youtu.be/639bh3jVOVU"> [Video]</a> 
+<a href="https://drive.google.com/open?id=0B1e2GU8Qot86UDNfUGVoelNzM0k">[PDF]</a> <a href="https://drive.google.com/open?id=0B1e2GU8Qot86T2psZVV3X2k4bFk"> [Poster]</a> <a href="{{ site.url }}/code"> [Code]</a> <a href="http://youtu.be/639bh3jVOVU"> [Video]</a> 
 </p>
 
 <div id="bib_lealcvpr2012" class="bibtex noshow">
@@ -739,7 +756,6 @@ L. Leal-Taix&eacute;, G. Pons-Moll and B. Rosenhahn<br />
 </tr>
 
 </table>
-
 <!-- Item: lealbook2012 -->
 <!-- <li >-->
 <table style="width:100%">
@@ -776,7 +792,6 @@ Springer Berlin Heidelberg,
 </tr>
 
 </table>
-
 <!-- Item: lealdagstuhl2012 -->
 <!-- <li >-->
 <table style="width:100%">
@@ -796,7 +811,7 @@ Springer Berlin Heidelberg,
 
 <a href="javascript:toggleBibtex('lealdagstuhl2012')">[BibTeX]</a>
 
-<a href="https://drive.google.com/open?id=0B1e2GU8Qot86ejhsMzZ2ZDhMSWs">[PDF]</a><a href="{{ site.url }}/code"> [Code]</a> 
+<a href="https://drive.google.com/open?id=0B1e2GU8Qot86ejhsMzZ2ZDhMSWs">[PDF]</a> <a href="{{ site.url }}/code"> [Code]</a> 
 </p>
 
 <div id="bib_lealdagstuhl2012" class="bibtex noshow">
@@ -815,7 +830,6 @@ Springer Berlin Heidelberg,
 </tr>
 
 </table>
-
 <!-- Item: maleschlijskibio2012 -->
 <!-- <li >-->
 <table style="width:100%">
@@ -852,7 +866,6 @@ S. Maleschlijski, G. H. Sendra, A. Di Fino, L. Leal-Taix&eacute;, I. Thome, A. T
 </tr>
 
 </table>
-
 <!-- Item: ponsdagstuhl2012 -->
 <!-- <li >-->
 <table style="width:100%">
@@ -890,7 +903,6 @@ Springer Berlin Heidelberg,
 </tr>
 
 </table>
-
 <!-- Item: lealiccv2011 -->
 <!-- <li >-->
 <table style="width:100%">
@@ -910,7 +922,7 @@ L. Leal-Taix&eacute;, G. Pons-Moll and B. Rosenhahn<br />
 
 <a href="javascript:toggleBibtex('lealiccv2011')">[BibTeX]</a>
 
-<a href="https://drive.google.com/open?id=0B1e2GU8Qot86RXROdThCNEVRRDg">[PDF]</a><a href="{{ site.url }}/code"> [Code]</a><a href="http://youtu.be/1DP3soJVOck"> [Video]</a> 
+<a href="https://drive.google.com/open?id=0B1e2GU8Qot86RXROdThCNEVRRDg">[PDF]</a> <a href="{{ site.url }}/code"> [Code]</a> <a href="http://youtu.be/1DP3soJVOck"> [Video]</a> 
 </p>
 
 <div id="bib_lealiccv2011" class="bibtex noshow">
@@ -927,7 +939,6 @@ L. Leal-Taix&eacute;, G. Pons-Moll and B. Rosenhahn<br />
 </tr>
 
 </table>
-
 <!-- Item: maleschlijskibio2011 -->
 <!-- <li >-->
 <table style="width:100%">
@@ -964,7 +975,6 @@ S. Maleschlijski, L. Leal-Taix&eacute;, S. Weisse, A. Di Fino, N. Aldred, A. S. 
 </tr>
 
 </table>
-
 <!-- Item: ponsdagm2011 -->
 <!-- <li >-->
 <table style="width:100%">
@@ -1001,7 +1011,6 @@ G. Pons-Moll, L. Leal-Taix&eacute;, T. Truong and B. Rosenhahn<br />
 </tr>
 
 </table>
-
 <!-- Item: ponsiccv2011 -->
 <!-- <li >-->
 <table style="width:100%">
@@ -1021,7 +1030,7 @@ G. Pons-Moll, A. Baak, J. Gall, L. Leal-Taix&eacute;, M. Mueller, H.-P.Seidel an
 
 <a href="javascript:toggleBibtex('ponsiccv2011')">[BibTeX]</a>
 
-<a href="https://drive.google.com/open?id=0B1e2GU8Qot86bkVacVVyN0hsNVE">[PDF]</a><a href="https://drive.google.com/open?id=0B1e2GU8Qot86bHJHclVyUTRtRzg"> [Suppl.]</a> 
+<a href="https://drive.google.com/open?id=0B1e2GU8Qot86bkVacVVyN0hsNVE">[PDF]</a> <a href="https://drive.google.com/open?id=0B1e2GU8Qot86bHJHclVyUTRtRzg"> [Suppl.]</a> 
 </p>
 
 <div id="bib_ponsiccv2011" class="bibtex noshow">
@@ -1038,7 +1047,6 @@ G. Pons-Moll, A. Baak, J. Gall, L. Leal-Taix&eacute;, M. Mueller, H.-P.Seidel an
 </tr>
 
 </table>
-
 <!-- Item: lealdagstuhl2011 -->
 <!-- <li >-->
 <table style="width:100%">
@@ -1076,7 +1084,6 @@ Springer Berlin Heidelberg,
 </tr>
 
 </table>
-
 <!-- Item: lealdagm2010 -->
 <!-- <li >-->
 <table style="width:100%">
@@ -1096,7 +1103,7 @@ L. Leal-Taix&eacute;, M. Heydt, S. Weisse, A. Rosenhahn and B. Rosenhahn<br />
 
 <a href="javascript:toggleBibtex('lealdagm2010')">[BibTeX]</a>
 
-<a href="https://drive.google.com/open?id=0B1e2GU8Qot86NkpNakhwMHZhbVU">[PDF]</a><a href="http://youtu.be/y_70plXPww8?attredirects=0"> [Video]</a> 
+<a href="https://drive.google.com/open?id=0B1e2GU8Qot86NkpNakhwMHZhbVU">[PDF]</a> <a href="http://youtu.be/y_70plXPww8?attredirects=0"> [Video]</a> 
 </p>
 
 <div id="bib_lealdagm2010" class="bibtex noshow">
@@ -1113,7 +1120,6 @@ L. Leal-Taix&eacute;, M. Heydt, S. Weisse, A. Rosenhahn and B. Rosenhahn<br />
 </tr>
 
 </table>
-
 <!-- Item: lealwmvc2009 -->
 <!-- <li >-->
 <table style="width:100%">
@@ -1150,7 +1156,6 @@ L. Leal-Taix&eacute;, M. Heydt, A. Rosenhahn and B. Rosenhahn<br />
 </tr>
 
 </table>
-
 <!-- Item: lealmsc2009 -->
 <!-- <li >-->
 <table style="width:100%">
@@ -1170,7 +1175,7 @@ L. Leal-Taix&eacute;<br />
 
 <a href="javascript:toggleBibtex('lealmsc2009')">[BibTeX]</a>
 
- 
+
 </p>
 
 <div id="bib_lealmsc2009" class="bibtex noshow">
@@ -1187,7 +1192,6 @@ L. Leal-Taix&eacute;<br />
 </tr>
 
 </table>
-
 <!-- Item: lealwcmpbe2009 -->
 <!-- <li >-->
 <table style="width:100%">
@@ -1224,4 +1228,3 @@ L. Leal-Taix&eacute;, A. U. Coskun, B. Rosenhahn and D. Brooks<br />
 </tr>
 
 </table>
-
