--- a/_includes/_mypubs.html
+++ b/_includes/_mypubs.html
@@ -1,3 +1,41 @@
+
+<!-- Item: walchiccv2017 -->
+<!-- <li >-->
+<table style="width:100%">
+<tr>
+<td style="width:110px;vertical-align: top;">
+<img style="float: left;margin-right: 10px" border="1px solid #bbb" src="{{ site.url }}/images/papers/WalHazLeaSatHilCreICCV2017.png" width="100px" height="100px">
+</td>
+<td>
+<p>
+F. Walch, C. Hazirbas, L. Leal-Taix&eacute;, T. Sattler, S. Hilsenbeck and D. Cremers<br />
+<strong>Image-based localization using LSTMs for structured feature correlation</strong><br />
+<i>IEEE International Conference on Computer Vision (ICCV)</i>, 
+
+
+2017.
+<br />
+
+<a href="javascript:toggleBibtex('walcharxiv2016')">[BibTeX]</a>
+
+<a href="https://arxiv.org/abs/1611.07890">[PDF]</a> 
+</p>
+
+<div id="bib_walcharxiv2016" class="bibtex noshow">
+<pre>
+@article{walcharxiv2016,
+  author = {F. Walch and C. Hazirbas and L. Leal-Taix&eacute; and T. Sattler and S. Hilsenbeck and D. Cremers},
+  title = {Image-based localization using LSTMs for structured feature correlation},
+  journal = {IEEE International Conference on Computer Vision (ICCV)},
+  year = {2017}
+}
+</pre>
+</div>
+</td>
+</tr>
+
+</table>
+
 <!-- Item: henschel:arxiv:2017 -->
 <!-- <li >-->
 <table style="width:100%">
@@ -135,42 +173,6 @@ S. Caelles, K.-K. Maninis, J. Pont-Tuset, L. Leal-Taix&eacute;, D. Cremers and L
   title = {One-Shot Video Object Segmentation},
   journal = {IEEE Conference on Computer Vision and Pattern Recognition (CVPR)},
   year = {2017}
-}
-</pre>
-</div>
-</td>
-</tr>
-
-</table>
-<!-- Item: walcharxiv2016 -->
-<!-- <li >-->
-<table style="width:100%">
-<tr>
-<td style="width:110px;vertical-align: top;">
-<img style="float: left;margin-right: 10px" border="1px solid #bbb" src="{{ site.url }}/images/papers/WalHazLeaSatHilCreArxiv2016.png" width="100px" height="100px">
-</td>
-<td>
-<p>
-F. Walch, C. Hazirbas, L. Leal-Taix&eacute;, T. Sattler, S. Hilsenbeck and D. Cremers<br />
-<strong>Image-based localization using LSTMs for structured feature correlation</strong><br />
-<i>arXiv:1611.07890v2</i>, 
-
-
-2016.
-<br />
-
-<a href="javascript:toggleBibtex('walcharxiv2016')">[BibTeX]</a>
-
-<a href="https://arxiv.org/abs/1611.07890">[PDF]</a> 
-</p>
-
-<div id="bib_walcharxiv2016" class="bibtex noshow">
-<pre>
-@article{walcharxiv2016,
-  author = {F. Walch and C. Hazirbas and L. Leal-Taix&eacute; and T. Sattler and S. Hilsenbeck and D. Cremers},
-  title = {Image-based localization using LSTMs for structured feature correlation},
-  journal = {arXiv:1611.07890v2},
-  year = {2016}
 }
 </pre>
 </div>
