semantic osvos added

--- a/_includes/_mypubs.html
+++ b/_includes/_mypubs.html
@@ -1,32 +1,31 @@
-
-<!-- Item: walchiccv2017 -->
+<!-- Item: maninisarxiv2017 -->
 <!-- <li >-->
 <table style="width:100%">
 <tr>
 <td style="width:110px;vertical-align: top;">
-<img style="float: left;margin-right: 10px" border="1px solid #bbb" src="{{ site.url }}/images/papers/WalHazLeaSatHilCreICCV2017.png" width="100px" height="100px">
+<img style="float: left;margin-right: 10px" border="1px solid #bbb" src="{{ site.url }}/images/papers/CaeManPonLeaCreVanCVPR2017.png" width="100px" height="100px">
 </td>
 <td>
 <p>
-F. Walch, C. Hazirbas, L. Leal-Taix&eacute;, T. Sattler, S. Hilsenbeck and D. Cremers<br />
-<strong>Image-based localization using LSTMs for structured feature correlation</strong><br />
-<i>IEEE International Conference on Computer Vision (ICCV)</i>, 
+K.-K. Maninis, S. Caelles, Y. Chen, J. Pont-Tuset, L. Leal-Taix&eacute;, D. Cremers and L. Van Gool<br />
+<strong>Video Object Segmentation Without Temporal Information</strong><br />
+<i>arXiv:1709.06031</i>, 
 
 
 2017.
 <br />
 
-<a href="javascript:toggleBibtex('walcharxiv2016')">[BibTeX]</a>
+<a href="javascript:toggleBibtex('maninisarxiv2017')">[BibTeX]</a>
 
-<a href="https://arxiv.org/abs/1611.07890">[PDF]</a> 
+<a href="https://arxiv.org/abs/1709.06031">[PDF]</a> 
 </p>
 
-<div id="bib_walcharxiv2016" class="bibtex noshow">
+<div id="bib_maninisarxiv2017" class="bibtex noshow">
 <pre>
-@article{walcharxiv2016,
-  author = {F. Walch and C. Hazirbas and L. Leal-Taix&eacute; and T. Sattler and S. Hilsenbeck and D. Cremers},
-  title = {Image-based localization using LSTMs for structured feature correlation},
-  journal = {IEEE International Conference on Computer Vision (ICCV)},
+@article{maninisarxiv2017,
+  author = {K.-K. Maninis and S. Caelles and Y. Chen and J. Pont-Tuset and L. Leal-Taix&eacute; and D. Cremers and L. Van Gool},
+  title = {Video Object Segmentation Without Temporal Information},
+  journal = {arXiv:1709.06031},
   year = {2017}
 }
 </pre>
@@ -72,6 +71,7 @@ R. Henschel, L. Leal-Taix&eacute;, D. Cremers and B. Rosenhahn<br />
 </tr>
 
 </table>
+
 <!-- Item: lealtaixearxiv2017 -->
 <!-- <li >-->
 <table style="width:100%">
@@ -108,6 +108,7 @@ L. Leal-Taix&eacute;, A. Milan, K. Schindler, D. Cremers, I. Reid and S. Roth<br
 </tr>
 
 </table>
+
 <!-- Item: hazirbas:arxiv:2017 -->
 <!-- <li >-->
 <table style="width:100%">
@@ -144,6 +145,7 @@ C. Hazirbas, L. Leal-Taix&eacute; and D. Cremers<br />
 </tr>
 
 </table>
+
 <!-- Item: caellescvpr2017 -->
 <!-- <li >-->
 <table style="width:100%">
@@ -180,6 +182,44 @@ S. Caelles, K.-K. Maninis, J. Pont-Tuset, L. Leal-Taix&eacute;, D. Cremers and L
 </tr>
 
 </table>
+
+<!-- Item: walchiccv2017 -->
+<!-- <li >-->
+<table style="width:100%">
+<tr>
+<td style="width:110px;vertical-align: top;">
+<img style="float: left;margin-right: 10px" border="1px solid #bbb" src="{{ site.url }}/images/papers/WalHazLeaSatHilCreICCV2017.png" width="100px" height="100px">
+</td>
+<td>
+<p>
+F. Walch, C. Hazirbas, L. Leal-Taix&eacute;, T. Sattler, S. Hilsenbeck and D. Cremers<br />
+<strong>Image-based localization using LSTMs for structured feature correlation</strong><br />
+<i>IEEE International Conference on Computer Vision (ICCV)</i>, 
+
+
+2017.
+<br />
+
+<a href="javascript:toggleBibtex('walchiccv2017')">[BibTeX]</a>
+
+<a href="https://arxiv.org/abs/1611.07890">[PDF]</a> 
+</p>
+
+<div id="bib_walchiccv2017" class="bibtex noshow">
+<pre>
+@article{walchiccv2017,
+  author = {F. Walch and C. Hazirbas and L. Leal-Taix&eacute; and T. Sattler and S. Hilsenbeck and D. Cremers},
+  title = {Image-based localization using LSTMs for structured feature correlation},
+  journal = {IEEE International Conference on Computer Vision (ICCV)},
+  year = {2017}
+}
+</pre>
+</div>
+</td>
+</tr>
+
+</table>
+
 <!-- Item: henschelarxiv2016 -->
 <!-- <li >-->
 <table style="width:100%">
@@ -216,6 +256,7 @@ R. Henschel, L. Leal-Taix&eacute;, B. Rosenhahn and K. Schindler<br />
 </tr>
 
 </table>
+
 <!-- Item: lealcvprw2016 -->
 <!-- <li >-->
 <table style="width:100%">
@@ -252,6 +293,7 @@ L. Leal-Taix&eacute;, C. Canton-Ferrer and K. Schindler<br />
 </tr>
 
 </table>
+
 <!-- Item: milanarxiv2016 -->
 <!-- <li >-->
 <table style="width:100%">
@@ -271,7 +313,7 @@ A. Milan, L. Leal-Taix&eacute;, I. Reid, S. Roth and K. Schindler<br />
 
 <a href="javascript:toggleBibtex('milanarxiv2016')">[BibTeX]</a>
 
-<a href="https://arxiv.org/abs/1603.00831">[PDF]</a> <a href="http://www.motchallenge.net/"> [MOTChallenge]</a> 
+<a href="https://arxiv.org/abs/1603.00831">[PDF]</a><a href="http://www.motchallenge.net/"> [MOTChallenge]</a> 
 </p>
 
 <div id="bib_milanarxiv2016" class="bibtex noshow">
@@ -288,6 +330,7 @@ A. Milan, L. Leal-Taix&eacute;, I. Reid, S. Roth and K. Schindler<br />
 </tr>
 
 </table>
+
 <!-- Item: fenziiccv2015 -->
 <!-- <li >-->
 <table style="width:100%">
@@ -324,6 +367,7 @@ M. Fenzi, L. Leal-Taix&eacute;, J. Ostermann and T. Tuytelaars<br />
 </tr>
 
 </table>
+
 <!-- Item: milancvpr2015 -->
 <!-- <li >-->
 <table style="width:100%">
@@ -361,6 +405,7 @@ A. Milan, L. Leal-Taix&eacute;, K. Schindler and I. Reid<br />
 </tr>
 
 </table>
+
 <!-- Item: lealarxiv2015 -->
 <!-- <li >-->
 <table style="width:100%">
@@ -380,7 +425,7 @@ L. Leal-Taix&eacute;, A. Milan, I. Reid, S. Roth and K. Schindler<br />
 
 <a href="javascript:toggleBibtex('lealarxiv2015')">[BibTeX]</a>
 
-<a href="https://arxiv.org/abs/1504.01942">[PDF]</a> <a href="http://www.motchallenge.net/"> [MOTChallenge]</a> 
+<a href="https://arxiv.org/abs/1504.01942">[PDF]</a><a href="http://www.motchallenge.net/"> [MOTChallenge]</a> 
 </p>
 
 <div id="bib_lealarxiv2015" class="bibtex noshow">
@@ -397,6 +442,7 @@ L. Leal-Taix&eacute;, A. Milan, I. Reid, S. Roth and K. Schindler<br />
 </tr>
 
 </table>
+
 <!-- Item: oliveiracmig2015 -->
 <!-- <li >-->
 <table style="width:100%">
@@ -406,7 +452,7 @@ L. Leal-Taix&eacute;, A. Milan, I. Reid, S. Roth and K. Schindler<br />
 </td>
 <td>
 <p>
-D.A.B. Oliveria, L. Leal-Taix&eacute;, R.Q. Feitosa and B. Rosenhahn<br />
+D. A. B. Oliveria, L. Leal-Taix&eacute;, R. Q. Feitosa and B. Rosenhahn<br />
 <strong>Automatic tracking of vessel-like structures from a single starting point</strong><br />
 <i>Computerized Medical Imaging and Graphics</i>, 
 
@@ -433,6 +479,7 @@ D.A.B. Oliveria, L. Leal-Taix&eacute;, R.Q. Feitosa and B. Rosenhahn<br />
 </tr>
 
 </table>
+
 <!-- Item: fenziwacv2015 -->
 <!-- <li >-->
 <table style="width:100%">
@@ -469,6 +516,7 @@ M. Fenzi, L. Leal-Taix&eacute;, K. Schindler and B. Rosenhahn<br />
 </tr>
 
 </table>
+
 <!-- Item: henschelgcpr2014 -->
 <!-- <li >-->
 <table style="width:100%">
@@ -505,6 +553,7 @@ R. Henschel, L. Leal-Taix&eacute; and B. Rosenhahn<br />
 </tr>
 
 </table>
+
 <!-- Item: lealcvpr2014 -->
 <!-- <li >-->
 <table style="width:100%">
@@ -524,7 +573,7 @@ L. Leal-Taix&eacute;, M. Fenzi, A. Kuznetsova, B. Rosenhahn and S. Savarese<br /
 
 <a href="javascript:toggleBibtex('lealcvpr2014')">[BibTeX]</a>
 
-<a href="https://drive.google.com/open?id=0B1e2GU8Qot86SGRtUy1iX2hmM1U">[PDF]</a> <a href="https://drive.google.com/open?id=0B1e2GU8Qot86UjNoRWU2MXgwLWs"> [SUNw abstract]</a> 
+<a href="https://drive.google.com/open?id=0B1e2GU8Qot86SGRtUy1iX2hmM1U">[PDF]</a><a href="https://drive.google.com/open?id=0B1e2GU8Qot86UjNoRWU2MXgwLWs"> [SUNw abstract]</a> 
 </p>
 
 <div id="bib_lealcvpr2014" class="bibtex noshow">
@@ -541,6 +590,7 @@ L. Leal-Taix&eacute;, M. Fenzi, A. Kuznetsova, B. Rosenhahn and S. Savarese<br /
 </tr>
 
 </table>
+
 <!-- Item: lealthesis2014 -->
 <!-- <li >-->
 <table style="width:100%">
@@ -560,7 +610,7 @@ L. Leal-Taix&eacute;<br />
 
 <a href="javascript:toggleBibtex('lealthesis2014')">[BibTeX]</a>
 
-<a href="https://drive.google.com/open?id=0B1e2GU8Qot86dVhlclpXcjVzYU0">[PDF]</a> <a href="http://arxiv.org/abs/1411.7935"> [ArXiV]</a> 
+<a href="https://drive.google.com/open?id=0B1e2GU8Qot86dVhlclpXcjVzYU0">[PDF]</a><a href="http://arxiv.org/abs/1411.7935"> [ArXiV]</a> 
 </p>
 
 <div id="bib_lealthesis2014" class="bibtex noshow">
@@ -577,6 +627,7 @@ L. Leal-Taix&eacute;<br />
 </tr>
 
 </table>
+
 <!-- Item: fenzicvpr2013 -->
 <!-- <li >-->
 <table style="width:100%">
@@ -613,6 +664,7 @@ M. Fenzi, L. Leal-Taix&eacute;, B. Rosenhahn and J. Ostermann<br />
 </tr>
 
 </table>
+
 <!-- Item: kuznetsovaiccvw2013 -->
 <!-- <li >-->
 <table style="width:100%">
@@ -649,6 +701,7 @@ A. Kuznetsova, L. Leal-Taix&eacute; and B. Rosenhahn<br />
 </tr>
 
 </table>
+
 <!-- Item: lealbookchapter2012 -->
 <!-- <li >-->
 <table style="width:100%">
@@ -668,7 +721,7 @@ Springer Berlin Heidelberg,
 
 <a href="javascript:toggleBibtex('lealbookchapter2012')">[BibTeX]</a>
 
-<a href="https://drive.google.com/open?id=0B1e2GU8Qot86aWtaeTNoNjJiQ0U">[PDF]</a> <a href="{{ site.url }}/code"> [Code]</a> 
+<a href="https://drive.google.com/open?id=0B1e2GU8Qot86aWtaeTNoNjJiQ0U">[PDF]</a><a href="{{ site.url }}/code"> [Code]</a> 
 </p>
 
 <div id="bib_lealbookchapter2012" class="bibtex noshow">
@@ -686,6 +739,7 @@ Springer Berlin Heidelberg,
 </tr>
 
 </table>
+
 <!-- Item: fenzidagm2012 -->
 <!-- <li >-->
 <table style="width:100%">
@@ -722,6 +776,7 @@ M. Fenzi, R. Dragon, L. Leal-Taix&eacute;, B. Rosenhahn and J. Ostermann<br />
 </tr>
 
 </table>
+
 <!-- Item: lealcvpr2012 -->
 <!-- <li >-->
 <table style="width:100%">
@@ -741,7 +796,7 @@ L. Leal-Taix&eacute;, G. Pons-Moll and B. Rosenhahn<br />
 
 <a href="javascript:toggleBibtex('lealcvpr2012')">[BibTeX]</a>
 
-<a href="https://drive.google.com/open?id=0B1e2GU8Qot86UDNfUGVoelNzM0k">[PDF]</a> <a href="https://drive.google.com/open?id=0B1e2GU8Qot86T2psZVV3X2k4bFk"> [Poster]</a> <a href="{{ site.url }}/code"> [Code]</a> <a href="http://youtu.be/639bh3jVOVU"> [Video]</a> 
+<a href="https://drive.google.com/open?id=0B1e2GU8Qot86UDNfUGVoelNzM0k">[PDF]</a><a href="https://drive.google.com/open?id=0B1e2GU8Qot86T2psZVV3X2k4bFk"> [Poster]</a><a href="{{ site.url }}/code"> [Code]</a><a href="http://youtu.be/639bh3jVOVU"> [Video]</a> 
 </p>
 
 <div id="bib_lealcvpr2012" class="bibtex noshow">
@@ -758,6 +813,7 @@ L. Leal-Taix&eacute;, G. Pons-Moll and B. Rosenhahn<br />
 </tr>
 
 </table>
+
 <!-- Item: lealbook2012 -->
 <!-- <li >-->
 <table style="width:100%">
@@ -794,6 +850,7 @@ Springer Berlin Heidelberg,
 </tr>
 
 </table>
+
 <!-- Item: lealdagstuhl2012 -->
 <!-- <li >-->
 <table style="width:100%">
@@ -813,7 +870,7 @@ Springer Berlin Heidelberg,
 
 <a href="javascript:toggleBibtex('lealdagstuhl2012')">[BibTeX]</a>
 
-<a href="https://drive.google.com/open?id=0B1e2GU8Qot86ejhsMzZ2ZDhMSWs">[PDF]</a> <a href="{{ site.url }}/code"> [Code]</a> 
+<a href="https://drive.google.com/open?id=0B1e2GU8Qot86ejhsMzZ2ZDhMSWs">[PDF]</a><a href="{{ site.url }}/code"> [Code]</a> 
 </p>
 
 <div id="bib_lealdagstuhl2012" class="bibtex noshow">
@@ -832,6 +889,7 @@ Springer Berlin Heidelberg,
 </tr>
 
 </table>
+
 <!-- Item: maleschlijskibio2012 -->
 <!-- <li >-->
 <table style="width:100%">
@@ -868,6 +926,7 @@ S. Maleschlijski, G. H. Sendra, A. Di Fino, L. Leal-Taix&eacute;, I. Thome, A. T
 </tr>
 
 </table>
+
 <!-- Item: ponsdagstuhl2012 -->
 <!-- <li >-->
 <table style="width:100%">
@@ -905,6 +964,7 @@ Springer Berlin Heidelberg,
 </tr>
 
 </table>
+
 <!-- Item: lealiccv2011 -->
 <!-- <li >-->
 <table style="width:100%">
@@ -924,7 +984,7 @@ L. Leal-Taix&eacute;, G. Pons-Moll and B. Rosenhahn<br />
 
 <a href="javascript:toggleBibtex('lealiccv2011')">[BibTeX]</a>
 
-<a href="https://drive.google.com/open?id=0B1e2GU8Qot86RXROdThCNEVRRDg">[PDF]</a> <a href="{{ site.url }}/code"> [Code]</a> <a href="http://youtu.be/1DP3soJVOck"> [Video]</a> 
+<a href="https://drive.google.com/open?id=0B1e2GU8Qot86RXROdThCNEVRRDg">[PDF]</a><a href="{{ site.url }}/code"> [Code]</a><a href="http://youtu.be/1DP3soJVOck"> [Video]</a> 
 </p>
 
 <div id="bib_lealiccv2011" class="bibtex noshow">
@@ -941,6 +1001,7 @@ L. Leal-Taix&eacute;, G. Pons-Moll and B. Rosenhahn<br />
 </tr>
 
 </table>
+
 <!-- Item: maleschlijskibio2011 -->
 <!-- <li >-->
 <table style="width:100%">
@@ -977,6 +1038,7 @@ S. Maleschlijski, L. Leal-Taix&eacute;, S. Weisse, A. Di Fino, N. Aldred, A. S. 
 </tr>
 
 </table>
+
 <!-- Item: ponsdagm2011 -->
 <!-- <li >-->
 <table style="width:100%">
@@ -1013,6 +1075,7 @@ G. Pons-Moll, L. Leal-Taix&eacute;, T. Truong and B. Rosenhahn<br />
 </tr>
 
 </table>
+
 <!-- Item: ponsiccv2011 -->
 <!-- <li >-->
 <table style="width:100%">
@@ -1032,7 +1095,7 @@ G. Pons-Moll, A. Baak, J. Gall, L. Leal-Taix&eacute;, M. Mueller, H.-P.Seidel an
 
 <a href="javascript:toggleBibtex('ponsiccv2011')">[BibTeX]</a>
 
-<a href="https://drive.google.com/open?id=0B1e2GU8Qot86bkVacVVyN0hsNVE">[PDF]</a> <a href="https://drive.google.com/open?id=0B1e2GU8Qot86bHJHclVyUTRtRzg"> [Suppl.]</a> 
+<a href="https://drive.google.com/open?id=0B1e2GU8Qot86bkVacVVyN0hsNVE">[PDF]</a><a href="https://drive.google.com/open?id=0B1e2GU8Qot86bHJHclVyUTRtRzg"> [Suppl.]</a> 
 </p>
 
 <div id="bib_ponsiccv2011" class="bibtex noshow">
@@ -1049,6 +1112,7 @@ G. Pons-Moll, A. Baak, J. Gall, L. Leal-Taix&eacute;, M. Mueller, H.-P.Seidel an
 </tr>
 
 </table>
+
 <!-- Item: lealdagstuhl2011 -->
 <!-- <li >-->
 <table style="width:100%">
@@ -1086,6 +1150,7 @@ Springer Berlin Heidelberg,
 </tr>
 
 </table>
+
 <!-- Item: lealdagm2010 -->
 <!-- <li >-->
 <table style="width:100%">
@@ -1105,7 +1170,7 @@ L. Leal-Taix&eacute;, M. Heydt, S. Weisse, A. Rosenhahn and B. Rosenhahn<br />
 
 <a href="javascript:toggleBibtex('lealdagm2010')">[BibTeX]</a>
 
-<a href="https://drive.google.com/open?id=0B1e2GU8Qot86NkpNakhwMHZhbVU">[PDF]</a> <a href="http://youtu.be/y_70plXPww8?attredirects=0"> [Video]</a> 
+<a href="https://drive.google.com/open?id=0B1e2GU8Qot86NkpNakhwMHZhbVU">[PDF]</a><a href="http://youtu.be/y_70plXPww8?attredirects=0"> [Video]</a> 
 </p>
 
 <div id="bib_lealdagm2010" class="bibtex noshow">
@@ -1122,6 +1187,7 @@ L. Leal-Taix&eacute;, M. Heydt, S. Weisse, A. Rosenhahn and B. Rosenhahn<br />
 </tr>
 
 </table>
+
 <!-- Item: lealwmvc2009 -->
 <!-- <li >-->
 <table style="width:100%">
@@ -1158,6 +1224,7 @@ L. Leal-Taix&eacute;, M. Heydt, A. Rosenhahn and B. Rosenhahn<br />
 </tr>
 
 </table>
+
 <!-- Item: lealmsc2009 -->
 <!-- <li >-->
 <table style="width:100%">
@@ -1177,7 +1244,7 @@ L. Leal-Taix&eacute;<br />
 
 <a href="javascript:toggleBibtex('lealmsc2009')">[BibTeX]</a>
 
-
+ 
 </p>
 
 <div id="bib_lealmsc2009" class="bibtex noshow">
@@ -1194,6 +1261,7 @@ L. Leal-Taix&eacute;<br />
 </tr>
 
 </table>
+
 <!-- Item: lealwcmpbe2009 -->
 <!-- <li >-->
 <table style="width:100%">
@@ -1230,3 +1298,4 @@ L. Leal-Taix&eacute;, A. U. Coskun, B. Rosenhahn and D. Brooks<br />
 </tr>
 
 </table>
+
